[package]
name = "rusty-jeff"
version = "0.1.0"
authors = ["Kashim Aziz <kaziz@bink.com>", "Chris Latham <cl@bink.com>"]
edition = "2018"

[lib]
name = "rustyjeff"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.11.1"
features = ["extension-module"]

[dependencies]
openssl = "0.10.30"
base64 = "0.12.3"
rayon = "1.3.1"
