[package]
name = "rusty-jeff"
version = "0.1.6"
authors = ["Kashim Aziz <kaziz@bink.com>", "Chris Latham <cl@bink.com>"]
edition = "2018"
readme = "README.md"

[lib]
name = "rustyjeff"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.16.4"
features = ["extension-module"]

[dependencies]
openssl = "0.10.38"
base64 = "0.13.0"
rayon = "1.5.2"
